--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-example",
+  "name": "instore-webapp",
   "scripts": {
     "start": "webpack-dev-server --hot --inline --progress --colors",
     "build": "webpack --progress --profile --colors",
@@ -10,12 +10,18 @@
     "babel-runtime": "5.6.18",
     "flux": "^2.0.1",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.26.4",
     "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "5.6.18",
     "babel-loader": "5.3.1",
+    "css-loader": "^0.21.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "html-webpack-plugin": "1.6.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "1.10.1",
     "webpack-dev-server": "1.10.1"
   }
