--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "scripts": {
     "start": "webpack-dev-server --hot --inline --progress --colors",
     "build": "webpack --progress --profile --colors",
+    "server": "node client/js/server.js",
     "test": "echo \"No unit tests and e2e tests yet\" && exit 1"
   },
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "5.6.18",
+    "babel-runtime": "^6.0.14",
+    "express": "^4.13.3",
     "flux": "^2.0.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.4",
     "react-router": "^0.13.4"
   },
   "devDependencies": {
-    "babel-core": "5.6.18",
-    "babel-loader": "5.3.1",
+    "babel-core": "^6.0.20",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
     "css-loader": "^0.21.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
